--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "internetbs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "\"Node.js library for the Internet.bs API\"",
-  "main": "index.js",
+  "main": "./internetbs.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
